Bug 36147 - i915GM: GPU hangup
Summary: i915GM: GPU hangup
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: highest blocker
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-11 23:38 UTC by Knut Petersen
Modified: 2011-04-12 01:07 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg Log (36.47 KB, text/plain)
2011-04-11 23:39 UTC, Knut Petersen
no flags Details
dmesg (45.06 KB, application/octet-stream)
2011-04-11 23:41 UTC, Knut Petersen
no flags Details
i915_error_state (757.65 KB, text/plain)
2011-04-11 23:44 UTC, Knut Petersen
no flags Details
Turn off relaxed fencing by default (5.04 KB, patch)
2011-04-12 00:27 UTC, Chris Wilson
no flags Details | Splinter Review
Turn off relaxed fencing by default (5.04 KB, patch)
2011-04-12 00:37 UTC, Chris Wilson
no flags Details | Splinter Review

Description Knut Petersen 2011-04-11 23:38:12 UTC
Steps to reproduce problem:

1: start X11
2: open e.g. konsole window (not maximized)
3: move window around on screen

Problem:

With todays X (git) , the screen freezes within seconds,
mouse and keyboard are unusable, a network
login shows X11 eating all available cpu time.
Find the full Xorg log and the error messages
taken from the kernel log attached.

With X.Org X Server 1.9.3 (opensuse 11.4)
the screen will be corrupted within seconds,
X might freeze, if it does not freeze there
are messages about newly detected monitors,
EDID errors, etc. Keyboard will be unusable
most of the time, network login is possible.

Systems: several AOpen i915GMm-hfs motherboards
(these are desktop mobos with mobile chipset and
Pentium M (Dothan)).
Comment 1 Knut Petersen 2011-04-11 23:39:52 UTC
Created attachment 45499 [details]
Xorg Log
Comment 2 Knut Petersen 2011-04-11 23:41:38 UTC
Created attachment 45500 [details]
dmesg
Comment 3 Knut Petersen 2011-04-11 23:44:43 UTC
Created attachment 45501 [details]
i915_error_state
Comment 4 Knut Petersen 2011-04-11 23:45:52 UTC
Option "Tiling" "false" in /etc/X11/xorg.conf is accepted, but it does not help:

[  1821.661] (==) intel(0): Depth 24, (--) framebuffer bpp 32
[  1821.662] (==) intel(0): RGB weight 888
[  1821.662] (==) intel(0): Default visual is TrueColor
[  1821.662] (**) intel(0): Option "Tiling" "false"
[  1821.662] (II) intel(0): Integrated Graphics Chipset: Intel(R) 915GM
[  1821.662] (--) intel(0): Chipset: "915GM"
[  1821.662] (**) intel(0): Framebuffer tiled
[  1821.662] (**) intel(0): Pixmaps linear
[  1821.662] (**) intel(0): 3D buffers tiled
[  1821.662] (**) intel(0): SwapBuffers wait enabled
[....]
[  1913.819] [mi] EQ overflowing. The server is probably stuck in an infinite loop.
Comment 5 Knut Petersen 2011-04-11 23:52:13 UTC
This bug can be fixed by reverting commit 
cc930a37612341a1f2457adb339523c215879d82
("uxa: Relax fencing some more for gen3").

I suspect that the bug might be related to
Bug 34014
Comment 6 Chris Wilson 2011-04-12 00:26:53 UTC
Right, this is probably one and the same as the earlier reports, but we have a clear regression identified here.
Comment 7 Chris Wilson 2011-04-12 00:27:53 UTC
Created attachment 45502 [details] [review]
Turn off relaxed fencing by default
Comment 8 Chris Wilson 2011-04-12 00:37:21 UTC
Created attachment 45503 [details] [review]
Turn off relaxed fencing by default

Nobody mention the typo in the last patch.
Comment 9 Knut Petersen 2011-04-12 00:59:58 UTC
Compiled and tested the patch.
It does help as expected.
Comment 10 Chris Wilson 2011-04-12 01:07:27 UTC
Thank you, Knut.

/me crosses his fingers that the others are indeed the same bug.

commit 686018f283f1d131073ef5917213e6a8ac013f26
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Apr 12 08:23:04 2011 +0100

    Turn relaxed-fencing off by default for older (pre-G33) chipsets
    
    There are still too many unresolved bugs, typically GPU hangs, that are
    related to using relaxed fencing (i.e. only allocating the minimal
    amount of memory required for a buffer) on older hardware, so turn off
    the feature by default for the release.
    
    Reported-and-tested-by: Knut Petersen <Knut_Petersen@t-online.de>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=36147
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Acked-by: Daniel Vetter <daniel.vetter@ffwll.ch>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.